# m12-can2dds-publishers

./: CANmessages.xlsx  CMakeLists.txt  README.md  before_cmake.sh  initial_build.sh  initial_plan.txt
src/: CANread_event_publishers_1.cpp  CANread_event_publishers_1.h  M12_CAN2DDS.cpp  M12_CAN2DDS.h
src/IDL/: M12_EMstop.idl  M12_IMU_acceleration.idl  M12_IMU_gyro.idl  M12_RawCAN.idl  M12_Resolver.idl  M12_WorkHydraulicPosition.idl  M12_WorkHydraulicPressures.idl  M12_input_and_hsd.idl  WorkHydraulicsRequests.idl  build_types.py
